# InitioBot

./: CMakeLists.txt  README.md  compileAndRun
include/: arm.hpp  console_reader.hpp  digital_motor.hpp  drivetrain.hpp  input_devices.hpp  obstacle_sensor.hpp  robot_map.hpp  scheduler.hpp  servo.hpp  turret.hpp  utilities.hpp
src/: arm.cpp  console_reader.cpp  drive_client.cpp  drivetrain.cpp  input_devices.cpp  obstacle_sensor.cpp  servo.cpp  turret.cpp  utilities.cpp
